--- a/lxrcore.yaml
+++ b/lxrcore.yaml
@@ -56,7 +56,7 @@ tasks:
   - action: download_github
     dest: ./resources/[standalone]/PolyZone
     ref: master
-    src: https://github.com/LXRCore/PolyZone
+    src: https://github.com/mkafrin/PolyZone
 
   - action: download_github
     dest: ./resources/[standalone]/pma-voice
