--- a/lxrcore.yaml
+++ b/lxrcore.yaml
@@ -41,7 +41,7 @@ tasks:
   - action: download_github
     dest: ./resources/[standalone]/connectqueue
     ref: master
-    src: https://github.com/qbcore-framework/connectqueue
+    src: https://github.com/LXRCore/connectqueue
     
   - action: download_github
     dest: ./resources/[standalone]/progressbar
@@ -56,7 +56,7 @@ tasks:
   - action: download_github
     dest: ./resources/[standalone]/PolyZone
     ref: master
-    src: https://github.com/mkafrin/PolyZone
+    src: https://github.com/LXRCore/PolyZone
 
   - action: download_github
     dest: ./resources/[standalone]/pma-voice
